--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-botton-big">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exicting tours for adventurous people
           </h2>
@@ -38,7 +38,7 @@
 
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="heading-tertiary u-margin-botton-small">
+            <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
             </h3>
             <p class="paragraph">
@@ -47,7 +47,7 @@
               ipsum, vel possimus rerum eos at laboriosam tempora laborum
               reprehenderit alias consequatur iste nesciunt voluptate?
             </p>
-            <h3 class="heading-tertiary u-margin-botton-small">
+            <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventures like you never have before
             </h3>
             <p class="paragraph">
@@ -85,7 +85,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
-              <h3 class="heading-tertiary u-margin-botton-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Explore the world
               </h3>
               <p class="feature-box__text">
@@ -97,7 +97,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-compass"></i>
-              <h3 class="heading-tertiary u-margin-botton-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Meet nature
               </h3>
               <p class="feature-box__text">
@@ -109,7 +109,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
-              <h3 class="heading-tertiary u-margin-botton-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Find your way
               </h3>
               <p class="feature-box__text">
@@ -121,7 +121,7 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-heart"></i>
-              <h3 class="heading-tertiary u-margin-botton-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Live a healthier life
               </h3>
               <p class="feature-box__text">
@@ -134,7 +134,7 @@
       </section>
 
       <section class="section-tours">
-        <div class="u-center-text u-margin-botton-big">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
         <div class="row">
@@ -153,7 +153,7 @@
                     <li>Up to 30 people</li>
                     <li>2 tour guides</li>
                     <li>Sleep in cozy hotels</li>
-                    <li>Difficulty: easy</li>
+                    <li>Difficulty : easy</li>
                   </ul>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                     <li>Up to 40 people</li>
                     <li>6 tour guides</li>
                     <li>Sleep in provided tents</li>
-                    <li>Difficulty: medium</li>
+                    <li>Difficulty : medium</li>
                   </ul>
                 </div>
               </div>
@@ -213,7 +213,7 @@
                     <li>Up to 15 people</li>
                     <li>3 tour guides</li>
                     <li>Sleep in provided tents</li>
-                    <li>Difficulty: hard</li>
+                    <li>Difficulty : hard</li>
                   </ul>
                 </div>
               </div>
@@ -232,6 +232,69 @@
 
         <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Necessitatibus Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. NecessitatibusLorem ipsum dolor, sit amet
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different Now
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Necessitatibus Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. NecessitatibusLorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Necessitatibus Lorem ipsum dolor,
+                sit amet consectetur adipisicing elit. Necessitatibus
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
